2020-12-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/glfw_build.sh: Modified to build x86_64 and arm64 universal binary for Apple Silicon macOS.
	* Updated using latest gl.xml.

2020-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-07-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-05-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added platform-specific API

2020-04-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-03-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-01-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-11-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-10-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-09-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-07-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-06-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-04-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.3 features.
	* Updated using latest gl.xml.

2019-04-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-03-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-02-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-02-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.3 features.

2019-02-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2019-01-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.3 features.

2019-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Happy new year!

2018-12-23  vaiorabbit  <http://twitter.com/vaiorabbit>